# rustvectordb

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/api/: handlers.rs  routes.rs
src/db/: memory.rs
src/utils/: similarity.rs
