[package]
name = "rustvectordb"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
